--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media.css">
 </head>
@@ -18,7 +20,20 @@
                 <h1>login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente
                 </p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <i class="material-icons" >person</i>
+                        <input type="email" name="login" id="iLogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="iLogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <i class="material-icons">key</i>
+                        <input type="password" name="senha" id="iSenha" placeholder="Digite sua Senha" autocomplete="current-password" required minlength="8">
+                        <label for="iSenha">Senha</label>
+                    </div>
+                    <input type="submit" value="entrar">
+                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                </form>
             </div>
 
 
